--- a/Biografia.html
+++ b/Biografia.html
@@ -41,6 +41,7 @@
         <p></p>
         <p>En 2020, a los 17 años, ingresé a la universidad, enfrentándome a uno de los mayores desafíos de mi 
             vida hasta ahora. Actualmente, estoy trabajando para completar mis estudios universitarios.</p>
+         <img src="https://www.shutterstock.com/image-photo/black-white-piano-keys-taken-260nw-1938715912.jpg" alt="Google Logo" style="display: block; margin: 20px auto; max-width: 100%; height: auto;">
     </div>
    </body>
 </html>
