--- a/Biografia.html
+++ b/Biografia.html
@@ -39,8 +39,7 @@
         <p>A los ocho años, descubrí una de mis pasiones: la música.Desde entonces, el piano ha sido una 
             constante en mi vida, brindándome momentos de calma y creatividad. Además de la música, me gusta jugar fútbol con mis amigos, me libra de estres en cierto modo.</p>
         <p></p>
-        <p>En 2020, a los 17 años, ingresé a la universidad, enfrentándome a uno de los mayores desafíos de mi 
-            vida hasta ahora. Actualmente, estoy trabajando para completar mis estudios universitarios.</p>
+        <p>En 2020 ingrese a la universidad el cual fue un gran desafio.Actualmente, estoy trabajando para completar mis estudios universitarios.</p>
          <img src="https://www.shutterstock.com/image-photo/black-white-piano-keys-taken-260nw-1938715912.jpg" alt="Google Logo" style="display: block; margin: 20px auto; max-width: 100%; height: auto;">
     </div>
    </body>
